convert react-navigation -> react-native-navigation wix

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-image-slider-show": "^1.0.3",
-    "react-native-ionicons": "^5.0.0-rc",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-navigation": "^6.7.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.7.0",
